--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ header .image_2{
     position: absolute;
     top: 10%;
     left: 5%;
-    height: calc(100%/3);
+    /* height: calc(100%/3); */
     align-self: self-start;
     
 }
@@ -169,7 +169,7 @@ header .image_2{
     top: 50%;
     left: 57%;
     transform: translate(-50%,-50%);
-    height: calc(100%/3);
+    /* height: calc(100%/3); */
     align-self: center;
 }
 
@@ -181,7 +181,7 @@ header .image_2{
     position: absolute;
     bottom: -5%;
     right: 5%;
-    height: calc(100%/3);
+    /* height: calc(100%/3); */
     align-self: self-end;
 }
 .sec_2 .container_1 .p_cont_1{
@@ -396,10 +396,7 @@ footer{
         /* height: 25%; */
         align-self: self-end;
     }
-    .sec_2 .p_5{
-        /* bottom: 0; */
-        /* left: 0; */
-    }
+    
     
 }
 @media  (max-width: 1643px){
@@ -440,7 +437,7 @@ footer{
         align-self: center;
     }
 }
-@media (max-width: 1366px){
+@media (min-width:1025px) and (max-width: 1366px){
     /*                 Done               */
     header{
         height: 800px;
@@ -530,7 +527,7 @@ footer{
         
     }
 }
-@media (max-width:1024px){
+@media (min-width:422px) and(max-width:1024px){
     /*                 Done            */
     header{
         background-image: url(images/blue_bg.png);
@@ -663,7 +660,7 @@ footer{
         line-height: 12px;
     }
     .sec_1 .image_1 .im_3{
-        width: 60%;
+        width: 65%;
         /* height: 130px; */
         position: absolute;
         right: 25%;
@@ -673,14 +670,14 @@ footer{
     header .image_2{
         background-image: url(images/waves.png) ;
         background-repeat: no-repeat;
-        background-position:right 30px center;
-        background-size: 90% 70px;
-        /* width: 80%;
-        height: 200px; */
+        background-position:right 90px center;
+        background-size: 90% 80%;
+        /* width: 80%; */
+        height: 150px;
         /* position: absolute; */
         /* top: 60px;
         right: 25%; */
-        margin-top: -320px;
+        margin-top: -5px;
     }
 
 .sec_2{
@@ -688,9 +685,12 @@ footer{
     height: 300px;
     margin-bottom: 0;
 }
+.sec_2 .container_1{
+    width: 100%;
+}
 .sec_2 .p_1{
-    top: 10%;
-    left: 5%;
+    top: 18%;
+    left: 0%;
     width: 33%;
     align-self: self-start;
 }
@@ -701,54 +701,56 @@ footer{
 }
 .sec_2 .p_3{
     top: 50%;
-    left: 55%;
+    left: 48%;
     transform: translate(-50%,-50%);
-    width: 33%;
+    width: 39%;
     align-self: center;
 }
 
 .sec_2 .p_4{
-    bottom: 5%;
-    right: -3%;
-    width: 33%;
+    bottom: -2%;
+    right: 3%;
+    width: 36.33%;
     align-self: self-end;
 }
 .sec_2 .container_1 .p_cont_1{
     text-align: center;
-    font-size: 0.8em;
+    font-size: 0.6em;
     color: #5c5959;
 }
 .sec_2 .container_1 .P_cont_2{
     text-align: center;
-    font-size: .4em;
+    font-size: 7px;
     color: #5c5959;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 .sec_2 .p_5{
     width: 33%;
+    height: 100px;
     position: absolute;
-    bottom: 35%;
-    left: 0%;
+    top: 70%;
+    left: 3%;
+    /* border: 1px solid green; */
 }
 
 .sec_2 .p_5 img{
     height: 100px;
     position: absolute;
-    /* bottom: -50%; */
-    
+    left: 0;
+    bottom: 0;
 }
 .sec_2 .p_5 p{
     width: 200px;
     color: rgb(248, 243, 243);
     font-weight: 400;
-    font-size: 0.5em;
+    font-size: 0.4em;
     position: absolute;
     top: 40px;
-    left: 30px;
+    left: 18%;
     z-index: 3;
 }
-.sec_2 .p_5 .content p span{
-    font-size: 1em;
+.sec_2 .p_5 p span{
+    font-size: 15px;
 }
 .sec_3{
     width: 100%;
@@ -758,14 +760,14 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 .sec_3 .top{
     display: flex;
     width: 80%;
     height: 180px;
     justify-content: space-around;
-    margin-top: 10px;
+    margin-top: 0px;
     /* border: 1px solid green; */
 } 
 .sec_3 .top .small{
@@ -773,7 +775,8 @@ footer{
     align-self: flex-end;
 }
 .sec_3 .top .big{
-    height: 60%;
+    height: 80%;
+    align-self: flex-end;
 }
 .sec_3 .top span{
     align-self: flex-end;
